most other distributions seem to have).  On top of that, it comes with
a global setup file in /etc that breaks our very best intentions.
Find enclosed some modifications that will (hopefully) make screen
work on those special Debs in your life as well as on the machines it
used to run on so far.  As a side-effect, the default action is now
-RDD rather than -xRR, but since several people have requested that
anyways, I might be the only one missing the previous default.  Guess
I'll change my actionclasses.cfg and hold my peace forever.  : )
----------------------------------------------------------------------
Wed Oct  9 00:05:22 2002                        Michael Jennings (mej)

The beginnings of a dedicated config file section for Escreen stuff.
----------------------------------------------------------------------
Wed Oct  9 00:32:34 2002                        Michael Jennings (mej)

Tidying up a bit.
----------------------------------------------------------------------
Sun Oct 13 00:57:37 2002                        Michael Jennings (mej)

Moved "Escreen" menu to the new Escreen theme so it's no longer
hard-coded.

Added interactive prompting to search() script routine.

Changed dialog() routine to exec_dialog() and added editing of its
command line.

Added msgbox() script routine to display a message and wait for a
keypress.

Fixed a memory leak in the menu_dialog() function.  Also cleaned up
its event handling.

Added comments to the script routines that were missing them.

Make sure we exit cleanly if our window is destroyed.

Fixed the missing menus in the Escreen theme.  You'll still get an
error message when it loads, but I'm not that worried about it.
----------------------------------------------------------------------
Sun Oct 13 01:27:51 2002                        Michael Jennings (mej)

Make sure it builds without Imlib2 so we don't have a repeat of last
time.
----------------------------------------------------------------------