@@ -4,7 +4,7 @@
 Summary: Enlightened terminal emulator
 Name: Eterm
 Version: 0.9.2
-Release: 0.1
+Release: 0.2
 Copyright: BSD
 Group: User Interface/X
 %if %{bzip}
@@ -30,11 +30,14 @@ have the Imlib2 library installed.
 %setup -a 1
 
 %build
+CFLAGS="$RPM_OPT_FLAGS"
+export CFLAGS
+
 # When using the configure macro, I also specify all the directory
 # macros I use for compatibility with older versions of the macro
 %configure --bindir=%{_bindir} --libdir=%{_libdir} --mandir=%{_mandir} \
            --datadir=%{_datadir} --sysconfdir=%{_sysconfdir} \
-           --enable-multi-charset --enable-escreen
+           --enable-multi-charset --enable-escreen --enable-auto-encoding
 make
 
 %install
@@ -70,14 +73,14 @@ EOF
 chmod 0644 $RPM_BUILD_ROOT%{_sysconfdir}/X11/applnk/Utilities/Eterm.desktop
 
 %post
-/sbin/ldconfig
+test -x /sbin/ldconfig && /sbin/ldconfig
 
 if [ -d /usr/share/terminfo -a ! -f /usr/share/terminfo/E/Eterm ]; then
     tic -o/usr/share/terminfo $RPM_DOC_DIR/%{name}-%{version}/%{name}.ti || :
 fi
 
 %postun
-/sbin/ldconfig
+test -x /sbin/ldconfig && /sbin/ldconfig
 
 %clean
 rm -rf $RPM_BUILD_ROOT
